# CIID

./: README.md  pom.xml
.github/workflows/: build.yml
7. Trie-деревья/1/: Readme.txt  pom.xml
7. Trie-деревья/1/src/main/java/org/example/: Main.java  SuffixTree.java  SuffixTreeNode.java
CIID/: pom.xml
Trie_деревья/1/: Readme.txt  pom.xml
Trie_деревья/1/src/main/java/org/example/: Main.java
Trie_деревья/2/: Readme.txt
Trie_деревья/3/: Readme.txt  pom.xml
Trie_деревья/3/src/main/java/org/example/: Main.java  SubstringSearchAPI.java  Trie.java  TrieNode.java
Trie_деревья/4/: Readme.txt  pom.xml
Trie_деревья/4/src/main/java/org/example/: Main.java  Trie.java  TrieNode.java
axiety/: CMakeLists.txt
axiety/header/: AnxietyCopingSuggestions.h  AnxietyTest.h  PersonalAnxietyTest.h  SituationalAnxietyTest.h  UserManager.h  endwindow.h  endwindowgood.h  endwindownotbad.h  enterwindow.h  globalFuncs.h  history.h  mainwindow.h  test.h  userinterfacewindow.h
axiety/source/: endwindow.cpp  endwindow.ui  endwindowgood.cpp  endwindowgood.ui  endwindownotbad.cpp  endwindownotbad.ui  enterwindow.cpp  enterwindow.ui  globalFuncs.cpp  history.cpp  history.ui  main.cpp  mainwindow.cpp  mainwindow.ui  test.cpp  test.ui  userinterfacewindow.cpp  userinterfacewindow.ui
Деревья_бинарного_поиска/: Readme.txt
Деревья_бинарного_поиска/1/: Readme.txt  pom.xml
Деревья_бинарного_поиска/1/src/main/java/org/example/: Main.java  Result.java  TreeNode.java
Деревья_бинарного_поиска/2/: Readme.txt  pom.xml
Деревья_бинарного_поиска/3/: Readme.txt  pom.xml
Деревья_бинарного_поиска/4/: Readme.txt  pom.xml
Контейнеры_очереди_стеки/: Readme.txt
Контейнеры_очереди_стеки/1/: Readme.txt  pom.xml
Контейнеры_очереди_стеки/2/: Readme.txt  pom.xml
Контейнеры_очереди_стеки/3/: Readme.txt  pom.xml
Контейнеры_очереди_стеки/4/: Readme.txt  pom.xml
Контейнеры_очереди_стеки/4/src/: Main.java  TwoStacksInDeque.java
Поиск_подстрок/1/: Readme.txt  pom.xml
Поиск_подстрок/2/: Readme.txt  pom.xml
Поиск_подстрок/3/: Readme.txt  pom.xml
Поиск_подстрок/4/: Readme.txt  pom.xml
Применение_сортировок/: Readme.txt
Применение_сортировок/1/: Readme.txt  pom.xml
Применение_сортировок/2/: Readme.txt  pom.xml
Применение_сортировок/2.5.24/: Readme.txt
Применение_сортировок/3/: pom.xml
Применение_сортировок/4/: Readme.txt  pom.xml
Регулярные_выражения/1/: Readme.txt  pom.xml
Регулярные_выражения/2/: Readme.txt  pom.xml
Регулярные_выражения/3/: Readme.txt  pom.xml
Регулярные_выражения/4/: Readme.txt  pom.xml
Сбалансированные_деревья_поиска/1/: Readme.txt  pom.xml
Сбалансированные_деревья_поиска/2/: Readme.txt  pom.xml
Сбалансированные_деревья_поиска/3/: Readme.txt  pom.xml
Сбалансированные_деревья_поиска/4/: Readme.txt  pom.xml
Сортировка_строк/: Readme.txt
Сортировка_строк/1/: Readme.txt  pom.xml
Сортировка_строк/2/: Readme.txt  pom.xml
Сортировка_строк/3/: Readme.txt  pom.xml
Сортировка_строк/4/: Readme.txt  pom.xml
Хеш-таблицы/: Readme.txt
Хеш-таблицы/1/: Readme.txt  pom.xml
Хеш-таблицы/2/: Readme.txt  pom.xml
Хеш-таблицы/3/: Readme.txt  pom.xml
Хеш-таблицы/4/: Readme.txt  pom.xml
(+64 files in other folders)
